Regularizacion de ramas

--- a/Servicios.api.Libreria/appsettings.json
+++ b/Servicios.api.Libreria/appsettings.json
@@ -1,13 +1,15 @@
 {
+  "MongoDb": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "Database": "LibreriaMongoDB"
+  },
+  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
-  },
-  "MongoDB": {
-    "ConnectionString": "mongodb://192.168.1.10:27017",
-    "Database": "LibreriaMongoDB"
   },
   "AllowedHosts": "*"
 }
